# xarray_and_google_earth_engine_tutorial

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
xarray_and_google_earth_engine_tutorial/: __init__.py  dataset.py  features.py  plots.py
xarray_and_google_earth_engine_tutorial/modeling/: predict.py  train.py
