[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xarray_and_google_earth_engine_tutorial"
version = "0.0.1"
description = "A simple pipeline for loading data from Google Earth Engine and processing it with xarray"
authors = [
  { name = "Wyatt Boyer" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["xarray_and_google_earth_engine_tutorial"]
force_sort_within_sections = true
